Agrega autenticacion a API

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,7 @@ Eventos.Platinum.Data/obj
 Eventos.Platinum.Library/bin
 Eventos.Platinum.Library/obj
 
+Eventos.Platinum.Shared/bin
+Eventos.Platinum.Shared/obj
+
 .vs
