--- a/Eventos.Platinum.API/Eventos.Platinum.API.csproj
+++ b/Eventos.Platinum.API/Eventos.Platinum.API.csproj
@@ -3,11 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b2447439-0ef4-448a-a34a-c2385f62bad8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Eventos.Platinum.Library\Eventos.Platinum.Library.csproj" />
   </ItemGroup>
 
 </Project>
